fix(card): increases card spacing on larger screen sizes
The component padding is currently only used on card, however it should be considered to be the
default padding when creating a new component. There will however be exceptions for example buttons
where a smaller amount is required

--- a/projects/canopy/src/styles/spacing.scss
+++ b/projects/canopy/src/styles/spacing.scss
@@ -16,6 +16,7 @@
   --component-margin: var(--space-sm);
 
   @include breakpoint('md') {
+    --component-padding: var(--space-lg);
     --component-margin: var(--space-lg);
   }
 }
